Minor refactoring and added docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ logging.level.com.purnima.jain=DEBUG
 
 # Apache Kafka Configurations
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=myGroupFourthApp
-spring.kafka.topic-name=fifth_topic
+spring.kafka.consumer.group-id=my_app_group
+spring.kafka.topic-name=my_topic
 
 # No. of Concurrent Consumers in the Consumer-Group
 spring.kafka.listener.concurrency=3
